--- a/project web/untitled2/pages/total.css
+++ b/project web/untitled2/pages/total.css
@@ -82,3 +82,8 @@ body {
     text-decoration-line: none;
     text-decoration: none;
 }
+
+.h1 {
+    text-align: center;
+    color: whitesmoke;
+}
