--- a/project web/untitled2/pages/total.css
+++ b/project web/untitled2/pages/total.css
@@ -26,12 +26,6 @@ body {
     font-size: 16px;
 }
 
-
- .topnav .login-container{
-    float: right;
-    border-radius: 3px;
-    color: var(--btn-borderbf);
-}
 .topnav input[type=text] {
     padding: 6px;
     margin-top: 8px;
@@ -40,7 +34,7 @@ body {
     width: 150px;
 }
 
-.topnav .login-container button {
+ .login-container button {
     font-family: Verdana;
     border-radius: 5px;
     float: right;
@@ -62,9 +56,10 @@ body {
     font-size: 17px;
     border: none;
     cursor: pointer;
+    right: 5px;
 }
 
-.topnav .login-container button:hover {
+ .login-container button:hover {
     background: #ccc;
 }
 
@@ -81,9 +76,31 @@ body {
     text-decoration-color: whitesmoke;
     text-decoration-line: none;
     text-decoration: none;
+    position: static;
+    bottom: 0px;
 }
 
 .h1 {
     text-align: center;
+    
     color: whitesmoke;
+    position: relative;
+    top: 50px;
+}
+
+.login-container {
+    position: relative;
+    float: right;
+    float: top;
+    z-index: 3;
+    display: block;
+    border-radius: 3px;
+    color: var(--btn-borderbf);
+}
+
+.topnav {
+    position: fixed;
+    top: 0px;
+    z-index: 3;
+    display: block;
 }
