--- a/project web/untitled2/pages/total.css
+++ b/project web/untitled2/pages/total.css
@@ -39,7 +39,7 @@ body {
     border-radius: 5px;
     float: right;
     padding: 8px;
-    margin-top: 6px;
+    margin-top: -4px;
     margin-right: 5px;
     background: #ddd;
     font-size: 17px;
@@ -94,7 +94,7 @@ body {
 .login-container {
     position: relative;
     float: right;
-    float: top;
+    top: -10px;
     z-index: 3;
     display: block;
     border-radius: 3px;
@@ -112,4 +112,3 @@ body {
     position: relative;
     top: 5px;
 }
-
