--- a/project web/untitled2/pages/Catalog/Catalog.css
+++ b/project web/untitled2/pages/Catalog/Catalog.css
@@ -2,16 +2,38 @@
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 210px;
+    padding: 15px;
 }
 
 .gallery:hover {
     border: 1px solid #777;
 }
 
-.gallery img {
-    width: 100%;
+
+.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 100px;
     height: auto;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .desc {
