--- a/project web/untitled2/pages/total.css
+++ b/project web/untitled2/pages/total.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #232a40;
+    background-image: url("http://paperlief.com/images/camera-lens-logo-wallpaper-3.jpg") ;
     font-family: verdana;
     font-size: 20px;
     color: whitesmoke;
