--- a/project web/untitled2/pages/total.css
+++ b/project web/untitled2/pages/total.css
@@ -1,5 +1,7 @@
 body {
     background-image: url("http://paperlief.com/images/camera-lens-logo-wallpaper-3.jpg") ;
+    background-repeat: no-repeat ;
+    background-attachment: fixed ;
     font-family: verdana;
     font-size: 20px;
     color: whitesmoke;
