--- a/pages/total.css
+++ b/pages/total.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #232a40;
+    background-image: url("http://paperlief.com/images/camera-lens-logo-wallpaper-3.jpg") ;
+    background-repeat: no-repeat ;
+    background-attachment: fixed ;
     font-family: verdana;
     font-size: 20px;
     color: whitesmoke;
@@ -26,12 +28,6 @@ body {
     font-size: 16px;
 }
 
-
- .topnav .login-container{
-    float: right;
-    border-radius: 3px;
-    color: var(--btn-borderbf);
-}
 .topnav input[type=text] {
     padding: 6px;
     margin-top: 8px;
@@ -40,11 +36,12 @@ body {
     width: 150px;
 }
 
-.topnav .login-container button {
+ .login-container button {
     font-family: Verdana;
+    border-radius: 5px;
     float: right;
     padding: 8px;
-    margin-top: 6px;
+    margin-top: -4px;
     margin-right: 5px;
     background: #ddd;
     font-size: 17px;
@@ -52,7 +49,19 @@ body {
     cursor: pointer;
 }
 
-.topnav .login-container button:hover {
+.search{
+    font-family: Verdana;
+    border-radius: 5px;
+    padding: 8px;
+    margin-top: 6px;
+    margin-right: 5px;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    right: 5px;
+}
+
+ .login-container button:hover {
     background: #ccc;
 }
 
@@ -61,4 +70,84 @@ body {
     border: 2px solid var(--btn-borderaft);
     transition: all 0.5s linear 0.1s;
     background-color: var(--btn-borderaft);
+}
+
+.footer{
+    background-color: grey;
+    color: whitesmoke;
+    text-decoration-color: whitesmoke;
+    text-decoration-line: none;
+    text-decoration: none;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+}
+
+.h1 {
+    text-align: center;
+    color: whitesmoke;
+    position:relative;
+    top: 80px;
+    left:16%;
+}
+
+.login-container {
+    position: relative;
+    float: right;
+    top: -10px;
+    z-index: 3;
+    display: block;
+    border-radius: 3px;
+    color: var(--btn-borderbf);
+}
+
+.topnav {
+    position: fixed;
+    top: 0px;
+    z-index: 3;
+    display: block;
+}
+
+.Breadcrumbs{
+    position: relative;
+    top: 5px;
+    text-decoration: none;
+}
+
+.active {
+    background-color: #28afe8;
+}
+
+.p-t-1 {
+    background-color: black;
+}
+
+
+.fa-facebook-official{
+    color: #28afe8;
+    padding: 10px;
+}
+
+.fa-twitter{
+    color: #28afe8;
+    padding: 10px;
+}
+
+.fa-flickr{
+    color: #28afe8;
+    padding: 10px;
+}
+
+.fa-linkedin{
+    color: #28afe8;
+    padding: 10px;
+}
+
+.nav-item{
+    color: #28afe8;
+    text-decoration: none;
+    font-family: Verdana;
+    padding: 10px;
 }
